--- a/src/app/pages/student/view-student/view-student.component.html
+++ b/src/app/pages/student/view-student/view-student.component.html
@@ -1,3 +1,59 @@
+<ng-template #dialog let-data let-ref="dialogRef">
+    <nb-card id="addNewForm">
+        <nb-card-header>Add Lectures</nb-card-header>
+        <nb-card-body>
+            <br>
+            <form class="form-horizontal" [formGroup]="addNewLecForm" (ngSubmit)="addLecture()">
+                <div class="form-group row">
+                    <label for="courseMedium" class="label col-sm-5 form-control-label" style="font-size: 15px;"
+                        style="font-size: 12.75px;">Choose Course </label>
+
+                    <div class="col-sm-7">
+                        <nb-select formControlName="course_medium_id" placeholder="Select Course"
+                            (selectedChange)="loadSubjects($event)">
+                            <nb-option *ngFor="let courseMedium of courseMediums" value={{courseMedium.id}}>
+                                {{courseMedium.name}}
+                            </nb-option>
+                        </nb-select>
+                    </div>
+                </div><br><br><br>
+                <div class="form-group row">
+                    <label for="lectureName" class="label col-sm-5 form-control-label" style="font-size: 15px;"
+                        style="font-size: 12.75px;">Select Subject </label>
+
+                    <div class="col-sm-7">
+                        <nb-select formControlName="subject_id" placeholder="Choose Subject"
+                            (selectedChange)="loadLectures($event)">
+                            <nb-option *ngFor="let subject of subjects" value={{subject.id}}>
+                                {{subject.name}}
+                            </nb-option>
+                        </nb-select>
+                    </div>
+                </div><br><br><br>
+                <div class="form-group row">
+                    <label class="label col-sm-5 form-control-label" style="font-size: 14px;">Select
+                        Lecture</label>
+                    <br>
+                    <div class="col-sm-7">
+                        <nb-select formControlName="lecture_id" placeholder="Choose Lecture"
+                            (selectedChange)="lectureSelection($event)">
+                            <nb-option *ngFor="let lecture of lectures" value={{lecture.id}}>
+                                {{lecture.name}}
+                            </nb-option>
+                        </nb-select>
+                    </div>
+                    <br>
+                </div>
+            </form>
+
+        </nb-card-body>
+        <nb-card-footer>
+            <button nbButton (click)="ref.close()">Back</button>
+            <button nbButton id="submitButton" (click)="addLecture()">Add Lecture</button>&nbsp;
+        </nb-card-footer>
+    </nb-card>
+</ng-template>
+
 <div class="col-12">
     <nb-card size="flexible">
         <nb-tabset fullWidth>
@@ -52,127 +108,43 @@
             </nb-tab>
 
             <nb-tab tabTitle="Lecture Details">
-                <br>
-                <div class="table-responsive">
-                    <table class="table table-bordered table-striped">
-                        <thead>
-                            <tr>
-                                <th> Lecture</th>
-                                <th> Course</th>
-                                <th> Type</th>
-                                <th> Teacher</th>
-                                <th> Delete</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let lecture of lecturesOfStudent">
-                                <td>{{lecture.name}}</td>
-                                <td>{{lecture.course_medium.name}}</td>
-                                <td>{{lecture.type}}</td>
-                                <td>{{lecture.teacher.name}}</td>
-                                <td><button nbButton outline status="warning">Delete</button></td>
-                            </tr>
+                <nb-card>
+                    <nb-card-header>
+                        <div class="row">
+                            <div class="col-sm-9"></div>
+                            <div class="col-sm-3">
+                                <button nbButton shape="semi-round" (click)="onAddClick(dialog)">Add New
+                                    Lecture</button>
+                            </div>
+                        </div>
+                    </nb-card-header>
+                    <nb-card-body>
+                        <br>
+                        <div class="table-responsive">
+                            <table class="table table-bordered table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Lecture</th>
+                                        <th>Course</th>
+                                        <th>Type</th>
+                                        <th>Teacher</th>
+                                        <th>Delete</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let lecture of lecturesOfStudent">
+                                        <td>{{lecture.name}}</td>
+                                        <td>{{lecture.course_medium.name}}</td>
+                                        <td>{{lecture.type}}</td>
+                                        <td>{{lecture.teacher.name}}</td>
+                                        <td><button nbButton outline status="warning">Delete</button></td>
+                                    </tr>
 
-                        </tbody>
-                    </table>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-sm-8"></div>
-                    <div class="col-sm-4">
-                        <button nbButton shape="semi-round" status="info" (click)="addNewLecture()">Add New
-                            Lecture</button>
-                    </div>
-                </div>
-                <br><br>
-
-                <div class="row" *ngIf="displayAddNewForm" id="scheduleForm">
-                    <div class="col-md-9 offset-md-2">
-                        <nb-card>
-                            <nb-card-header>
-                                Add new Lecture to Student 2021909
-                            </nb-card-header>
-                            <nb-card-body>
-                                <form class="form-horizontal" [formGroup]="addNewLecForm" (ngSubmit)="addLecture()">
-                                    <div class="form-group row">
-                                        <div class="col-sm-12">
-                                            <nb-card accent="info">
-                                                <nb-card-body>
-                                                    <div class="form-group row">
-                                                        <label for="courseMedium"
-                                                            class="label col-sm-6 form-control-label"
-                                                            style="font-size: 12.75px;">Select Course </label>
-
-                                                        <div class="col-sm-6">
-                                                            <nb-select select-min-width
-                                                                formControlName="course_medium_id"
-                                                                placeholder="Select Course"
-                                                                (selectedChange)="loadSubjects($event)">
-                                                                <nb-option *ngFor="let courseMedium of courseMediums"
-                                                                    value={{courseMedium.id}}>
-                                                                    {{courseMedium.name}}
-                                                                </nb-option>
-                                                            </nb-select>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group row">
-                                                        <label for="lectureName"
-                                                            class="label col-sm-6 form-control-label"
-                                                            style="font-size: 12.75px;">Select Lecture </label>
-
-                                                        <div class="col-sm-6">
-                                                            <nb-select select-min-width formControlName="subject_id"
-                                                                placeholder="Select Lectures"
-                                                                (selectedChange)="loadLectures($event)">
-                                                                <nb-option *ngFor="let subject of subjects"
-                                                                    value={{subject.id}}>
-                                                                    {{subject.name}}
-                                                                </nb-option>
-                                                            </nb-select>
-                                                        </div>
-                                                    </div>
-                                                </nb-card-body>
-                                            </nb-card>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row">
-
-                                        <nb-card accent="info">
-                                            <nb-card-body>
-                                                <label class="label col-sm-6 form-control-label"
-                                                    style="font-size: 14px;">Select
-                                                    Lecture</label>
-                                                <br>
-                                                <div class="col-sm-6">
-                                                    <nb-select select-min-width formControlName="lecture_id"
-                                                        placeholder="Select Lectures"
-                                                        (selectedChange)="lectureSelection($event)">
-                                                        <nb-option *ngFor="let lecture of lectures"
-                                                            value={{lecture.id}}>
-                                                            {{lecture.name}}
-                                                        </nb-option>
-                                                    </nb-select>
-                                                </div>
-                                            </nb-card-body>
-                                        </nb-card>
-
-                                        <br>
-                                    </div>
-
-                                    <div class="form-group row">
-                                        <div class="offset-sm-3 col-sm-9">
-                                            <button type="submit" nbButton status="success">Add Lecture</button>
-                                            &nbsp;&nbsp;
-                                            <button type="submit" nbButton status="info">Cancel</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </nb-card-body>
-                        </nb-card>
-
-                    </div>
-                </div>
+                                </tbody>
+                            </table>
+                        </div>
+                    </nb-card-body>
+                </nb-card>
             </nb-tab>
         </nb-tabset>
     </nb-card>
