--- a/src/app/pages/student/view-student/view-student.component.scss
+++ b/src/app/pages/student/view-student/view-student.component.scss
@@ -3,6 +3,14 @@
   height:550px;
 }
 
-  #submitButton{
+#addLecBtn{
     float:right;
-  }
+}
+
+#skipBtn{
+  margin-right: 30px;
+}
+
+#addLecture{
+  float:right;
+}
